--- a/BGS_MCP/pyproject.toml
+++ b/BGS_MCP/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "mcp[cli]>=1.0.0",
+    "cmm-data>=0.1.0",
     "httpx>=0.27.0",
     "pydantic>=2.0.0",
     "fastapi>=0.115.0",
