--- a/CLaiMM/pyproject.toml
+++ b/CLaiMM/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "mcp[cli]>=1.0.0",
+    "cmm-data>=0.1.0",
     "httpx>=0.27.0",
     "litellm>=1.40.0",
     "python-dotenv>=1.0.0",
