--- a/CMM_API/pyproject.toml
+++ b/CMM_API/pyproject.toml
@@ -5,6 +5,7 @@ description = "Unified REST API for Critical Minerals and Materials - Combines C
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "cmm-data>=0.1.0",
     "fastapi>=0.115.0",
     "uvicorn>=0.30.0",
     "httpx>=0.27.0",
