--- a/OSTI_MCP/pyproject.toml
+++ b/OSTI_MCP/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "mcp[cli]>=1.0.0",
+    "cmm-data>=0.1.0",
     "pandas>=2.0.0",
     "pydantic>=2.0.0",
 ]
